Remove the unused security policy
Rely on default Java security policies